--- a/index.html
+++ b/index.html
@@ -12,11 +12,30 @@
           <div class="logo">
             Header Logo
           </div>
+        </div>
+        <div class="right">
           <ul class="links">
-            <li><a href="google.com">header link-one</a></li>
-            <li><a href="google.com">header link-two</a></li>
-            <li><a href="google.com">header link-three</a></li>
+            <li><a href="one">header link-one</a></li>
+            <li><a href="two">header link-two</a></li>
+            <li><a href="three">header link-three</a></li>
           </ul>
         </div>
+    </div>
+    <div class="section">
+        <div class="top-container">
+            <div class="h1">
+                This website is awesome
+            </div>
+            <div class="text">
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+            </div>
+            <button class="sign-up">Sign up</button>
+        </div>
+        <div class="top-container">
+            <img class="image" src="..." alt="image">
+        </div>
+    </div>
+    <div></div>
+    
 </body>
 </html>
