Add second section to index.html
4 boxes with text underneath section. Still undecided on what I'll do
with it, but this will be the plain as of this moment.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="section">
-        <div class="top-container">
+        <div class="container">
             <div class="h1">
                 This website is awesome
             </div>
@@ -31,10 +31,35 @@
             </div>
             <button class="sign-up">Sign up</button>
         </div>
-        <div class="top-container">
+        <div class="container">
             <img class="image" src="..." alt="image">
         </div>
     </div>
+    <div class="section">
+        <div class="title">Some random information.</div>
+        <div class="container">
+            <div class="box-info">
+                <img class="image" src="..." alt="image">
+                <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+
+            <div class="box-info">
+                <img class="image" src="..." alt="image">
+                <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+
+            <div class="box-info">
+                <img class="image" src="..." alt="image">
+                <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+
+            <div class="box-info">
+                <img class="image" src="..." alt="image">
+                <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+        </div>
+    </div>
+
     <div></div>
     
 </body>
