--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Landing Page</title>
 </head>
 <body>
+
     <div class="header">
         <div class="left">
           <div class="logo">
@@ -21,6 +22,7 @@
           </ul>
         </div>
     </div>
+
     <div class="section">
         <div class="container">
             <div class="h1">
@@ -35,6 +37,7 @@
             <img class="image" src="..." alt="image">
         </div>
     </div>
+
     <div class="section">
         <div class="title">Some random information.</div>
         <div class="container">
@@ -60,7 +63,21 @@
         </div>
     </div>
 
-    <div></div>
+    <div class="section">
+        <div class="container">
+            <div class="text">
+                This is such an inspiration quote, or a really satisfied customer who wants to give their super good review of my site or product because they're super happy. Man my hat is nice!
+            </div>
+            <div class="text">-Doug Dimmadome, owner of the Dimmsdale Dimmadome!</div>
+    </div>
+
+    <div class="section">
+        
+    </div>
+
+    <div class="footer">
+
+    </div>
     
 </body>
 </html>
