--- a/index.html
+++ b/index.html
@@ -72,11 +72,15 @@
     </div>
 
     <div class="section">
-        
+        <div class="container">
+            <div class="header">Call to action! It's time!</div>
+            <div class="text">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="sign-up">Sign up</button>
     </div>
 
     <div class="footer">
-
+        Copyright © The Odin Project 2021
     </div>
     
 </body>
