Add css to header and section 1 of index

--- a/index.html
+++ b/index.html
@@ -4,84 +4,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
-<body>
-
-    <div class="header">
-        <div class="left">
-          <div class="logo">
-            Header Logo
-          </div>
-        </div>
-        <div class="right">
-          <ul class="links">
-            <li><a href="one">header link-one</a></li>
-            <li><a href="two">header link-two</a></li>
-            <li><a href="three">header link-three</a></li>
-          </ul>
-        </div>
-    </div>
-
-    <div class="section">
-        <div class="container">
-            <div class="h1">
-                This website is awesome
+    <body>
+        <div class="header">
+            <div class="left">
+            <div class="logo">
+                Header Logo
             </div>
-            <div class="text">
-                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
             </div>
-            <button class="sign-up">Sign up</button>
-        </div>
-        <div class="container">
-            <img class="image" src="..." alt="image">
-        </div>
-    </div>
-
-    <div class="section">
-        <div class="title">Some random information.</div>
-        <div class="container">
-            <div class="box-info">
-                <img class="image" src="..." alt="image">
-                <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
-
-            <div class="box-info">
-                <img class="image" src="..." alt="image">
-                <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
-
-            <div class="box-info">
-                <img class="image" src="..." alt="image">
-                <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
-
-            <div class="box-info">
-                <img class="image" src="..." alt="image">
-                <div class="text">This is some subtext under an illustration or image.</div>
+            <div class="right">
+            <ul class="links">
+                <li><a href="one">header link-one</a></li>
+                <li><a href="two">header link-two</a></li>
+                <li><a href="three">header link-three</a></li>
+            </ul>
             </div>
         </div>
-    </div>
 
-    <div class="section">
-        <div class="container">
-            <div class="text">
-                This is such an inspiration quote, or a really satisfied customer who wants to give their super good review of my site or product because they're super happy. Man my hat is nice!
+        <div class="body">
+            <div class="hero section">
+                <div class="container">
+                    <div class="h1">
+                        This website is awesome
+                    </div>
+                    <div class="text">
+                        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                    </div>
+                    <button class="sign-up">Sign up</button>
+                </div>
+                <div class="container">
+                    <img class="image" src="..." alt="image">
+                </div>
             </div>
-            <div class="text">-Doug Dimmadome, owner of the Dimmsdale Dimmadome!</div>
-    </div>
 
-    <div class="section">
-        <div class="container">
-            <div class="header">Call to action! It's time!</div>
-            <div class="text">Sign up for our product by clicking that button right over there!</div>
+            <div class="section">
+                <div class="title">Some random information.</div>
+                <div class="container">
+                    <div class="box-info">
+                        <img class="image" src="..." alt="image">
+                        <div class="text">This is some subtext under an illustration or image.</div>
+                    </div>
+
+                    <div class="box-info">
+                        <img class="image" src="..." alt="image">
+                        <div class="text">This is some subtext under an illustration or image.</div>
+                    </div>
+
+                    <div class="box-info">
+                        <img class="image" src="..." alt="image">
+                        <div class="text">This is some subtext under an illustration or image.</div>
+                    </div>
+
+                    <div class="box-info">
+                        <img class="image" src="..." alt="image">
+                        <div class="text">This is some subtext under an illustration or image.</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="container">
+                    <div class="text">
+                        This is such an inspiration quote, or a really satisfied customer who wants to give their super good review of my site or product because they're super happy. Man my hat is nice!
+                    </div>
+                    <div class="text">-Doug Dimmadome, owner of the Dimmsdale Dimmadome!</div>
+            </div>
+
+            <div class="section">
+                <div class="container">
+                    <div class="big-text">Call to action! It's time!</div>
+                    <div class="text">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="sign-up">Sign up</button>
+            </div>
+            <div class="footer">
+                Copyright © The Odin Project 2021
+            </div>
         </div>
-        <button class="sign-up">Sign up</button>
-    </div>
-
-    <div class="footer">
-        Copyright © The Odin Project 2021
-    </div>
-    
-</body>
+    </body>
 </html>
