Add css to section 1 of index.html with .jpg image

--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
 
     <div class="body">
         <div class="first-container">
-            <div class="hero-header">
-                <div class="h1">
+            <div class="sect1-info">
+                <div class="sect1-h1">
                     This website is awesome
                 </div>
-                <div class="text">
-                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
-                </div>
+                <div class="sect1-text">
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast. BLAHBLAH.</div>
                 <button class="sign-up">Sign up</button>
             </div>
             <div class="container">
