Add style and section 2 of index page
Might need to revert this one as its very unstable with what works

--- a/index.html
+++ b/index.html
@@ -24,46 +24,46 @@
     </div>
 
     <div class="body">
-        <div class="first-container">
-            <div class="sect1-info">
-                <div class="sect1-h1">
-                    This website is awesome
-                </div>
-                <div class="sect1-text">
-                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast. BLAHBLAH.</div>
-                <button class="sign-up">Sign up</button>
-            </div>
-            <div class="container">
-                <img class="image" src="..." alt="image">
-            </div>
+      <div class="first-container">
+        <div class="sect1-info">
+          <div class="sect1-h1">
+            This website is awesome
+          </div>
+          <div class="sect1-text">
+            This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast. BLAHBLAH.</div>
+          <button class="sign-up">Sign up</button>
         </div>
+        <div class="sect1-img">
+          <img class="sect1-image" src="odin-dunk.jpg" alt="SMITE God Odin in a basketball outfit and handlebar mustache, dunking a flaming basketball on SMITE Goddess Nike">
+        </div>
+      </div>
 
-        <div class="second-container">
-          <div class="title">Some random information.</div>
-          <div class="container">
-            <div class="box-info">
-              <img class="image" src="..." alt="image">
-              <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
+      <div class="second-container">
+        <div class="s2-title">Some random information.</div>
+        <div class="random-container">
+          <div class="box-info">
+            <img class="s2-image" src="yellow-fluff.jpeg" alt="image">
+            <div class="text">This is some subtext under an illustration or image.</div>
+          </div>
 
-            <div class="box-info">
-              <img class="image" src="..." alt="image">
-              <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
+          <div class="box-info">
+            <img class="s2-image" src="yellow-fluff.jpeg" alt="image">
+            <div class="text">This is some subtext under an illustration or image.</div>
+          </div>
 
-            <div class="box-info">
-              <img class="image" src="..." alt="image">
-              <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
+          <div class="box-info">
+            <img class="s2-image" src="yellow-fluff.jpeg" alt="image">
+            <div class="text">This is some subtext under an illustration or image.</div>
+          </div>
 
-            <div class="box-info">
-              <img class="image" src="..." alt="image">
-              <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
+          <div class="box-info">
+            <img class="s2-image" src="yellow-fluff.jpeg" alt="image">
+            <div class="text">This is some subtext under an illustration or image.</div>
           </div>
         </div>
+      </div>
 
-        <div class="third-container">
+      <div class="third-container">
           <div class="container">
             <div class="text">
             This is such an inspiration quote, or a really satisfied customer who wants to give their super good review of my site or product because they're super happy. Man my hat is nice!
@@ -72,18 +72,20 @@
             -Doug Dimmadome, owner of the Dimmsdale Dimmadome!
             </div>
           </div>
-        </div>
+      </div>
 
-        <div class="fourth-container">
-          <div class="container">
-            <div class="big-text">Call to action! It's time!</div>
-            <div class="text">Sign up for our product by clicking that button right over there!</div>
-          </div>
-          <button class="sign-up">Sign up</button>
+      <div class="fourth-container">
+        <div class="container">
+          <div class="big-text">Call to action! It's time!</div>
+          <div class="text">Sign up for our product by clicking that button right over there!</div>
         </div>
+        <button class="sign-up">Sign up</button>
+      </div>
     </div>
+
     <div class="footer">
       Copyright © The Odin Project 2021
     </div>
+
   </body>
 </html>
