Add more css and polish to second section

--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
         <div class="s2-title">Some random information.</div>
         <div class="random-container">
           <div class="box-info">
-            <img class="s2-image" src="yellow-fluff.jpeg" alt="image">
-            <div class="text">This is some subtext under an illustration or image.</div>
+            <img class="s2-image" src="outline-box.jpg" alt="image">
+            <div class="s2-text">This is some subtext under an illustration or image.</div>
           </div>
 
           <div class="box-info">
-            <img class="s2-image" src="yellow-fluff.jpeg" alt="image">
-            <div class="text">This is some subtext under an illustration or image.</div>
+            <img class="s2-image" src="outline-box.jpg" alt="image">
+            <div class="s2-text">This is some subtext under an illustration or image.</div>
           </div>
 
           <div class="box-info">
-            <img class="s2-image" src="yellow-fluff.jpeg" alt="image">
-            <div class="text">This is some subtext under an illustration or image.</div>
+            <img class="s2-image" src="outline-box.jpg" alt="image">
+            <div class="s2-text">This is some subtext under an illustration or image.</div>
           </div>
 
           <div class="box-info">
-            <img class="s2-image" src="yellow-fluff.jpeg" alt="image">
-            <div class="text">This is some subtext under an illustration or image.</div>
+            <img class="s2-image" src="outline-box.jpg" alt="image">
+            <div class="s2-text">This is some subtext under an illustration or image.</div>
           </div>
         </div>
       </div>
