--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
       </div>
 
       <div class="third-container">
-          <div class="container">
-            <div class="text">
-            This is such an inspiration quote, or a really satisfied customer who wants to give their super good review of my site or product because they're super happy. Man my hat is nice!
+          <div class="quote-container">
+            <div class="s3-quote">
+              First, have a definite, clear practical ideal; a goal, an objective. Second, have the necessary means to achieve your ends; wisdom, money, materials, and methods. Third, adjust all your means to that end.
             </div>
-            <div class="text">
-            -Doug Dimmadome, owner of the Dimmsdale Dimmadome!
+            <div class="s3-strong">
+            - Aristotle
             </div>
           </div>
       </div>
