Add styles and text to section 4 of index
This project is mostly complete, and it is using the example layout
shown in the two pictures on the project page. If we ever need to
restore the original design if any new ones get complicated, this
should be used to go back to the stock layout.

--- a/index.html
+++ b/index.html
@@ -75,11 +75,16 @@
       </div>
 
       <div class="fourth-container">
-        <div class="container">
-          <div class="big-text">Call to action! It's time!</div>
-          <div class="text">Sign up for our product by clicking that button right over there!</div>
+        <div class="c2a-container">
+          <div class="s4-container">
+            <div class="s4-header">Call to action! It's time!</div>
+            <div class="s4-text">Sign up for our product by clicking that button right over there!</div>
+          </div>
+          <div>
+            <button class="c2a-signup">Sign up</button>
+          </div>
         </div>
-        <button class="sign-up">Sign up</button>
+        
       </div>
     </div>
 
