Edit styles.css and made img dir to remove clutter

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <button class="sign-up">Sign up</button>
         </div>
         <div class="sect1-img">
-          <img class="sect1-image" src="odin-dunk.jpg" alt="SMITE God Odin in a basketball outfit and handlebar mustache, dunking a flaming basketball on SMITE Goddess Nike">
+          <img class="sect1-image" src="images/pancake.jpg" alt="SMITE God Odin in a basketball outfit and handlebar mustache, dunking a flaming basketball on SMITE Goddess Nike">
         </div>
       </div>
 
@@ -42,22 +42,22 @@
         <div class="s2-title">Some random information.</div>
         <div class="random-container">
           <div class="box-info">
-            <img class="s2-image" src="outline-box.jpg" alt="image">
+            <img class="s2-image" src="images/outline-box.jpg" alt="image">
             <div class="s2-text">This is some subtext under an illustration or image.</div>
           </div>
 
           <div class="box-info">
-            <img class="s2-image" src="outline-box.jpg" alt="image">
+            <img class="s2-image" src="images/outline-box.jpg" alt="image">
             <div class="s2-text">This is some subtext under an illustration or image.</div>
           </div>
 
           <div class="box-info">
-            <img class="s2-image" src="outline-box.jpg" alt="image">
+            <img class="s2-image" src="images/outline-box.jpg" alt="image">
             <div class="s2-text">This is some subtext under an illustration or image.</div>
           </div>
 
           <div class="box-info">
-            <img class="s2-image" src="outline-box.jpg" alt="image">
+            <img class="s2-image" src="images/outline-box.jpg" alt="image">
             <div class="s2-text">This is some subtext under an illustration or image.</div>
           </div>
         </div>
